src/x502api.h


#define X502_ADC_RANGE_CNT            6
#define X502_OUT_FREQ_DIV_DEFAULT   2
#define X502_DEVNAME_SIZE      32
#define X502_SERIAL_SIZE       32
#define X502_LOCATION_STR_SIZE 64
#define X502_MAC_ADDR_SIZE     6
#define X502_DAC_CH_CNT  2
#define X502_DEVREC_SIGN       0x4C524543
typedef enum {
    X502_STREAM_ADC  = 0x01, 
    X502_STREAM_DIN  = 0x02, 
    X502_STREAM_DAC1 = 0x10, 
    X502_STREAM_DAC2 = 0x20, 
    X502_STREAM_DOUT = 0x40, 
    X502_STREAM_ALL_IN = X502_STREAM_ADC | X502_STREAM_DIN,
    X502_STREAM_ALL_OUT = X502_STREAM_DAC1 | X502_STREAM_DAC2 | X502_STREAM_DOUT
} t_x502_streams;
typedef enum {
    X502_STREAM_OUT_WORD_TYPE_DOUT   = 0x0, 
    X502_STREAM_OUT_WORD_TYPE_DAC1   = 0x40000000, 
    X502_STREAM_OUT_WORD_TYPE_DAC2   = 0x80000000  
} t_x502_stream_out_wrd_type;
typedef enum {
    X502_MODE_FPGA  = 0, 
    X502_MODE_DSP   = 1, 
    X502_MODE_DEBUG = 2  
} t_x502_mode;
typedef enum {
    X502_DAC_CH1 = 0, 
    X502_DAC_CH2 = 1  
} t_x502_dac_ch;
typedef enum {
    X502_DAC_FLAGS_VOLT    = 0x0001,
    X502_DAC_FLAGS_CALIBR  = 0x0002
} t_x502_dacout_flags;
typedef enum {
    X502_STREAM_CH_IN  = 0, 
    X502_STREAM_CH_OUT = 1  
} t_x502_stream_ch;
typedef enum {
    X502_PULLUPS_DI_H      = 0x01, 
    X502_PULLUPS_DI_L      = 0x02, 
    X502_PULLUPS_DI_SYN1   = 0x04, 
    X502_PULLUPS_DI_SYN2   = 0x08, 
    X502_PULLDOWN_CONV_IN  = 0x10, 
    X502_PULLDOWN_START_IN = 0x20, 
} t_x502_pullups;
typedef enum {
    X502_DEVFLAGS_DAC_PRESENT           = 0x00000001,
    X502_DEVFLAGS_GAL_PRESENT           = 0x00000002,
    X502_DEVFLAGS_BF_PRESENT            = 0x00000004,
    X502_DEVFLAGS_IFACE_SUPPORT_USB     = 0x00000100,
    X502_DEVFLAGS_IFACE_SUPPORT_ETH     = 0x00000200,
    X502_DEVFLAGS_IFACE_SUPPORT_PCI     = 0x00000400,
    X502_DEVFLAGS_INDUSTRIAL            = 0x00008000,
    X502_DEVFLAGS_FLASH_DATA_VALID      = 0x00010000,
    X502_DEVFLAGS_FLASH_ADC_CALIBR_VALID = 0x00020000,
    X502_DEVFLAGS_FLASH_DAC_CALIBR_VALID = 0x00040000,
    X502_DEVFLAGS_FPGA_LOADED            = 0x00800000,
    X502_DEVFLAGS_DEVREC_OPENED          = 0x01000000
} t_x502_dev_flags;
typedef enum {
    X502_LOCATION_TYPE_NONE             = 0,
    X502_LOCATION_TYPE_ADDR             = 1,
    X502_LOCATION_TYPE_INSTANCE_NAME    = 2
} t_x502_location_type;
typedef enum {
    X502_OUT_CYCLE_FLAGS_FORCE         = 0x01,
    X502_OUT_CYCLE_FLAGS_WAIT_DONE = 0x02
} t_x502_out_cycle_flags;
typedef enum {
    X502_FEATURE_OUT_FREQ_DIV       = 1,
    X502_FEATURE_OUT_STATUS_FLAGS   = 2
} t_x502_features;
typedef enum {
    X502_OUT_STATUS_FLAG_BUF_IS_EMPTY = 0x01,
    X502_OUT_STATUS_FLAG_BUF_WAS_EMPTY = 0x02
} t_x502_out_status_flags;
typedef struct st_x502_devrec_inptr t_x502_devrec_inptr;
typedef struct {
    uint32_t sign;  
    char devname[X502_DEVNAME_SIZE]; 
    char serial[X502_SERIAL_SIZE]; 
    char location[X502_LOCATION_STR_SIZE]; 
    uint32_t flags; 
    uint8_t  iface; 
    uint8_t  location_type; 
    char res[122];  
    t_x502_devrec_inptr* internal; 
} t_x502_devrec;
typedef struct st_x502* t_x502_hnd;
typedef char (*t_x502_serial_list)[X502_SERIAL_SIZE];
typedef struct {
    double offs; 
    double k; 
} t_x502_cbr_coef;
typedef struct {
    t_x502_cbr_coef adc[X502_ADC_RANGE_CNT];
    uint32_t res1[64]; 
    t_x502_cbr_coef dac[X502_DAC_CH_CNT];
    uint32_t res2[20]; 
} t_x502_cbr;
typedef struct {
    char name[X502_DEVNAME_SIZE]; 
    char serial[X502_SERIAL_SIZE]; 
    uint32_t devflags; 
    uint16_t fpga_ver; 
    uint8_t  plda_ver; 
    uint8_t  board_rev; 
    uint32_t mcu_firmware_ver; 
    uint8_t  factory_mac[X502_MAC_ADDR_SIZE]; 
    uint8_t res[110]; 
    t_x502_cbr cbr; 
} t_x502_info;
X502_EXPORT(t_x502_hnd) X502_Create(void);
X502_EXPORT(int32_t) X502_Free(t_x502_hnd hnd);
X502_EXPORT(int32_t) X502_OpenByDevRecord(t_x502_hnd hnd, const t_x502_devrec *devrec);
X502_EXPORT(int32_t) X502_FreeDevRecordList(t_x502_devrec *list, uint32_t size);
X502_EXPORT(int32_t) X502_Close(t_x502_hnd hnd);
X502_EXPORT(int32_t) X502_GetDevInfo(t_x502_hnd hnd, t_x502_info* info);
X502_EXPORT(int32_t) X502_OutCycleSetup(t_x502_hnd hnd, uint32_t flags);
X502_EXPORT(int32_t) X502_OutCycleStop(t_x502_hnd hnd, uint32_t flags);
X502_EXPORT(int32_t) X502_OutGetStatusFlags(t_x502_hnd hnd, uint32_t *status);