pas/x502api.pas


    {-------- Флаги для обозначения синхронных потоков данных -----------------}
    X502_STREAM_ADC  = $01; //Поток данных от АЦП
    X502_STREAM_DIN  = $02; // Поток данных с цифровых входов
    X502_STREAM_DAC1 = $10; // Поток данных первого канала ЦАП
    X502_STREAM_DAC2 = $20; // Поток данных второго канала ЦАП
    X502_STREAM_DOUT = $40; // Поток данных на цифровые выводы
    // объединение всех флагов, обозначающих потоки данных на ввод
    X502_STREAM_ALL_IN = X502_STREAM_ADC or X502_STREAM_DIN;
    // объединение всех флагов, обозначающих потоки данных на вывод
    X502_STREAM_ALL_OUT = X502_STREAM_DAC1 or X502_STREAM_DAC2 or X502_STREAM_DOUT;


    {--- Константы, определяющие тип передаваемого отсчета из ПК в модуль -----}
    X502_STREAM_OUT_WORD_TYPE_DOUT   = $0; // Цифровой вывод
    X502_STREAM_OUT_WORD_TYPE_DAC1   = $40000000; // Код для 1-го канала ЦАП
    X502_STREAM_OUT_WORD_TYPE_DAC2   = $80000000; // Код для 2-го канала ЦАП

    {------------------ Режим работы модуля L502 ------------------------------}
    X502_MODE_FPGA  = 0; // Все потоки данных передаются через ПЛИС минуя
                         //   сигнальный процессор BlackFin
    X502_MODE_DSP   = 1; // Все потоки данных передаются через сигнальный
                         //   процессор, который должен быть загружен
                         //   прошивкой для обработки этих потоков
    X502_MODE_DEBUG = 2; // Отладочный режим

    {------------------- Номера каналов ЦАП -----------------------------------}
    X502_DAC_CH1 = 0;  //Первый канал ЦАП
    X502_DAC_CH2 = 1;  //Второй канал ЦАП

    {----------- Флаги, используемые при выводе данных на ЦАП -----------------}
    // Указывает, что значение задано в Вольтах и при выводе его нужно
    // перевести в коды ЦАП. Если флаг не указан, то считается, что значение
    // изначально в кодах
    X502_DAC_FLAGS_VOLT    = $0001;
    // Указывает, что нужно применить калибровочные коэффициенты перед
    //    выводом значения на ЦАП.
    X502_DAC_FLAGS_CALIBR  = $0002;

    {---------- Номера каналов для передачи потоков данных --------------------}
    X502_STREAM_CH_IN  = 0; // Общий канал на ввод
    X502_STREAM_CH_OUT = 1; // Общий канал на вывод

    {--- Цифровые линии, на которых можно включить подтягивающие резисторы ----}
    X502_PULLUPS_DI_H      = $01; // Старшая половина цифровых входов (только для L502)
    X502_PULLUPS_DI_L      = $02; // Младшая половина цифровых входов (только для L502)
    X502_PULLUPS_DI_SYN1   = $04; // Линия SYN1
    X502_PULLUPS_DI_SYN2   = $08; // Линия SYN2
    X502_PULLDOWN_CONV_IN  = $10; // Подтяжка к 0 линии межмодульной
                                  //   синхронизации CONV_IN (только для E502)
    X502_PULLDOWN_START_IN = $20; // Подтяжка к 0 линии межмодульной
                                  //   синхронизации START_IN (только для E502)



    {--------------- Флаги, определяющие наличие опций в модуле ---------------}
    // Признак наличия двухканального канального ЦАП
    X502_DEVFLAGS_DAC_PRESENT           = $00000001;
    // Признак наличия гальваноразвязки
    X502_DEVFLAGS_GAL_PRESENT           = $00000002;
    // Признак наличия сигнального процессора BlackFin
    X502_DEVFLAGS_BF_PRESENT            = $00000004;

    // Признак, что устройство поддерживает интерфейс USB
    X502_DEVFLAGS_IFACE_SUPPORT_USB     = $00000100;
    // Признак, что устройство поддерживает Ethernet
    X502_DEVFLAGS_IFACE_SUPPORT_ETH     = $00000200;
    // Признак, что устройство поддерживает интерфейс PCI/PCI-Express
    X502_DEVFLAGS_IFACE_SUPPORT_PCI     = $00000400;

    // Признак, что устройство выполнено в индустриалном исполнении
    X502_DEVFLAGS_INDUSTRIAL            = $00008000;

    // Признак, что во Flash-памяти присутствует информация о модуле
    X502_DEVFLAGS_FLASH_DATA_VALID      = $00010000;
    // Признак, что во Flash-памяти присутствуют действительные калибровочные коэффициенты АЦП
    X502_DEVFLAGS_FLASH_ADC_CALIBR_VALID = $00020000;
    // Признак, что во Flash-памяти присутствуют действительные калибровочные коэффициенты ЦАП
    X502_DEVFLAGS_FLASH_DAC_CALIBR_VALID = $00040000;

    // Признак, что присутствует прошивка ПЛИС и она успешно была загружена
    X502_DEVFLAGS_FPGA_LOADED            = $00800000;
    // Признак, что устройство уже открыто (действителен только внутри t_x502_devrec)
    X502_DEVFLAGS_DEVREC_OPENED          = $01000000;


    { Тип содержимого строки с расположением устройства }
    // В поле расположения устройства не содержится информации
    X502_LOCATION_TYPE_NONE             = 0;
    // В поле расположения устройства содержится строка с адресом устройства
    X502_LOCATION_TYPE_ADDR             = 1;
    // В поле ресположения устройства содержится строка с именем экземпляра
    X502_LOCATION_TYPE_INSTANCE_NAME    = 2;

    {----------------Флаги для режима циклического вывода----------------------}
    // Флаг указывает, что останов или смена сигнала могут произойти без ожидания
    //    конца цикла предыдущего сигнала.
    X502_OUT_CYCLE_FLAGS_FORCE = $01;

    // Флаг указывает, что функция должна дождаться полной загрузки сигнала
    // и установки сигнала на вывод (для X502_OutCycleSetup()) или завершения
    // генерации циклического сигнала (для X502_OutCycleStop())
    X502_OUT_CYCLE_FLAGS_WAIT_DONE = $02;

	
	{ ----- Коды возможностей модуля, которые могут поддерживаться или нет 
	        в зависимости от типа модуля, версий прошивок и т.п. -------------}
    // Поддержка установки делителя частоты вывода, отличного от #X502_OUT_FREQ_DIV_DEFAULT
    X502_FEATURE_OUT_FREQ_DIV       = 1;
    // Возможность чтения флагов состояния вывода с помощью X502_OutGetStatusFlags() 
    X502_FEATURE_OUT_STATUS_FLAGS   = 2;

	{ --------------- Флаги состояния для синхронного вывода ------------------}
    // Флаг указывает, что в настоящее время буфер в модуле на передачу пуст 
    X502_OUT_STATUS_FLAG_BUF_IS_EMPTY = $01;
    // Флаг указывает, что было опустошение буфера на вывод с начала старта синхронного
    //    ввода-вывода или с момента последнего чтения статуса с помощью
    //    X502_OutGetStatusFlags() (в зависимости от того, что было последним) 
    X502_OUT_STATUS_FLAG_BUF_WAS_EMPTY = $02;

type
  st_x502_devrec_inptr = record
  end;
  t_x502_devrec_inptr_hnd = ^st_x502_devrec_inptr;

  // Структура, описывающая устройство, по которой с ним можно установить соединение
  t_x502_devrec = record
    sign    : LongWord;  { Признак действительной структуры.
                       Если запись действительна (соответствует какому-либо устройству),
                       то должен быть равен #X502_DEVREC_SIGN) }
    devname : array [0..X502_DEVNAME_SIZE-1] of AnsiChar; // Название устройства
    serial  : array [0..X502_SERIAL_SIZE-1] of AnsiChar; // Серийный номер
    location: array [0..X502_LOCATION_STR_SIZE-1] of AnsiChar; // Описание подключения (если есть)
    flags   : LongWord; // Флаги из #t_x502_dev_flags, описывающие устройство
    iface   : Byte;    // Интерфейс, по которому подключено устройство
    location_type : Byte; // Определяет, что именно сохранено в поле location
    res     : array [0..122-1] of Byte;  // Резерв
    internal : t_x502_devrec_inptr_hnd; { Непрозрачный указатель на структуру с
                                          информацией об устройстве для возможности
                                          его открытия. }
  end;


  // описатель модуля - указатель на непрозрачную структуру
  t_x502_hnd = ^st_x502;
  st_x502 = record
  end;

  { калибровочные коэффициенты диапазона }
  t_x502_cbr_coef = record
    offs: Double;  // смещение нуля
    k : Double; // коэффициент шкалы
  end;


  { Калибровочные коэффициенты модуля. }
  t_x502_cbr = record
    //Калибровочные коэффициенты АЦП
    adc: array[0..X502_ADC_RANGE_CNT-1] of t_x502_cbr_coef;
    res1: array[0..63] of LongWord;
    // Калибровочные коэффициенты ЦАП
    dac: array[0..X502_DAC_CH_CNT-1] of t_x502_cbr_coef;
    res2: array[0..19] of LongWord;
  end;

  { Информация о модуле}
  t_x502_info = record
    name: array[0..X502_DEVNAME_SIZE-1] of AnsiChar; // Название устройства ("L502")
    serial: array[0..X502_SERIAL_SIZE-1] of AnsiChar; // Серийный номер
    devflags: LongWord; // Флаги описывающие наличие в модуле определенных опций
    fpga_ver : Word; // Версия ПЛИС (старший байт - мажорная, младший - минорная)
    plda_ver : Byte; // Версия ПЛИС, управляющего аналоговой частью
    board_rev: Byte; // Ревизия платы
    mcu_firmware_ver : LongWord; // Версия прошивки контроллера Cortex-M4. Действительна только для E502
    factory_mac : array[0..X502_MAC_ADDR_SIZE-1] of byte; { Заводской MAC-адрес --- действителен только для
                                                                устройств с Ethernet-интерфейсом }
    res : array[0..110-1] of Byte; //резерв
    cbr : t_x502_cbr; // Заводские калибровочные коэффициенты (из Flash-памяти)
  end;


  type t_x502_serial_array = array[0..0] of array[0..X502_SERIAL_SIZE-1] of AnsiChar;
  type p_x502_serial_array = ^t_x502_serial_array;
  type t_x502_devrec_array = array[0..0] of t_x502_devrec;
  type p_x502_devrec_array = ^t_x502_devrec_array;


  function X502_Create(): t_x502_hnd; stdcall;
  function X502_Free(hnd: t_x502_hnd): LongInt; stdcall;

  function X502_OpenByDevRecord(hnd: t_x502_hnd; var devrec : t_x502_devrec) : LongInt; stdcall;
  function X502_FreeDevRecordList(list : array of t_x502_devrec; size : LongWord) : LongInt; stdcall; overload;
  function X502_FreeDevRecordList(var rec : t_x502_devrec) : LongInt; stdcall; overload;

  //разорвать связь с модулем
  function X502_Close(hnd: t_x502_hnd): LongInt; stdcall;
  //получение информации о модуле
  function X502_GetDevInfo(hnd: t_x502_hnd; out info: t_x502_info) : LongInt; stdcall;
